--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ python-docx==1.1.2
 pytz==2024.2
 pywin32==308
 pyzmq==26.2.0
+setuptools==75.8.1
 six==1.16.0
 stack-data==0.6.3
 tornado==6.4.1
@@ -53,3 +54,4 @@ traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.2
 wcwidth==0.2.13
+wheel==0.45.1
